# sorting-fhe

./: CITATION.cff  CMakeLists.txt  README.md  et --hard 9cac92b72q
comparison/: run_experiments.sh
comparison/experimental_results/ours_hybrid1/: N1024_summary.txt  N128_summary.txt  N16_summary.txt  N256_summary.txt  N32_summary.txt  N4_summary.txt  N512_summary.txt  N64_summary.txt  N8_summary.txt  total_results.txt
comparison/experimental_results/ours_hybrid1/trials/trial_1/: size_1024.txt  size_128.txt  size_16.txt  size_256.txt  size_32.txt  size_4.txt  size_512.txt  size_64.txt  size_8.txt
comparison/experimental_results/ours_hybrid1/trials/trial_10/: size_1024.txt  size_128.txt  size_16.txt  size_256.txt  size_32.txt  size_4.txt  size_512.txt  size_64.txt  size_8.txt
comparison/experimental_results/ours_hybrid1/trials/trial_2/: size_1024.txt  size_128.txt  size_16.txt  size_256.txt  size_32.txt  size_4.txt  size_512.txt  size_64.txt  size_8.txt
comparison/experimental_results/ours_hybrid1/trials/trial_3/: size_1024.txt  size_128.txt  size_16.txt  size_256.txt  size_32.txt  size_4.txt  size_512.txt  size_64.txt  size_8.txt
comparison/experimental_results/ours_hybrid1/trials/trial_4/: size_1024.txt  size_128.txt  size_16.txt  size_256.txt  size_32.txt  size_4.txt  size_512.txt  size_64.txt  size_8.txt
comparison/experimental_results/ours_hybrid1/trials/trial_5/: size_1024.txt  size_128.txt  size_16.txt  size_256.txt  size_32.txt  size_4.txt  size_512.txt  size_64.txt  size_8.txt
comparison/experimental_results/ours_hybrid1/trials/trial_6/: size_1024.txt  size_128.txt  size_16.txt  size_256.txt  size_32.txt  size_4.txt  size_512.txt  size_64.txt  size_8.txt
comparison/experimental_results/ours_hybrid1/trials/trial_7/: size_1024.txt  size_128.txt  size_16.txt  size_256.txt  size_32.txt  size_4.txt  size_512.txt  size_64.txt  size_8.txt
comparison/experimental_results/ours_hybrid1/trials/trial_8/: size_1024.txt  size_128.txt  size_16.txt  size_256.txt  size_32.txt  size_4.txt  size_512.txt  size_64.txt  size_8.txt
comparison/experimental_results/ours_hybrid1/trials/trial_9/: size_1024.txt  size_128.txt  size_16.txt  size_256.txt  size_32.txt  size_4.txt  size_512.txt  size_64.txt  size_8.txt
src/: sort_algo.h
src/k-way/: EvalUtils.cpp  EvalUtils.h
src/mehp24/: mehp24_sort.cpp
tests/: CMakeLists.txt  DirectSortH1Test.cpp  DirectSortH2Test.cpp  DirectSortHTest.cpp  DirectSortTest.cpp  SincTest.cpp  memory_tracker.cpp  memory_tracker.h
tests/k-way/: CMakeLists.txt  KWaySort2Test.cpp  KWaySort3Test.cpp  KWaySort5Test.cpp
tests/k-way2/: CMakeLists.txt  KWay2SortTestTemplate.h  KWay2SortTest_1024.cpp  KWay2SortTest_128.cpp  KWay2SortTest_16.cpp  KWay2SortTest_256.cpp  KWay2SortTest_32.cpp  KWay2SortTest_4.cpp  KWay2SortTest_512.cpp  KWay2SortTest_64.cpp  KWay2SortTest_8.cpp
tests/k-way3/: CMakeLists.txt  KWay3SortTestTemplate.h  KWay3SortTest_243.cpp  KWay3SortTest_27.cpp  KWay3SortTest_729.cpp  KWay3SortTest_81.cpp  KWay3SortTest_9.cpp
tests/k-way5/: CMakeLists.txt  KWay5SortTestTemplate.h  KWay5SortTest_125.cpp  KWay5SortTest_25.cpp  KWay5SortTest_625.cpp
tests/mehp24/: CMakeLists.txt  Mehp24SortTest.cpp  Mehp24SortTestTemplate.h  Mehp24SortTest_1024.cpp  Mehp24SortTest_128.cpp  Mehp24SortTest_16.cpp  Mehp24SortTest_256.cpp  Mehp24SortTest_32.cpp  Mehp24SortTest_4.cpp  Mehp24SortTest_512.cpp  Mehp24SortTest_64.cpp  Mehp24SortTest_8.cpp
tests/ours/: CMakeLists.txt  DirectSortTestTemplate.h  DirectSortTest_1024.cpp  DirectSortTest_128.cpp  DirectSortTest_16.cpp  DirectSortTest_256.cpp  DirectSortTest_32.cpp  DirectSortTest_4.cpp  DirectSortTest_512.cpp  DirectSortTest_64.cpp  DirectSortTest_8.cpp
tests/ours-h1/: CMakeLists.txt  DirectSortH1Test.cpp  Hybrid1SortTestTemplate.h  Hybrid1SortTest_1024.cpp  Hybrid1SortTest_128.cpp  Hybrid1SortTest_16.cpp  Hybrid1SortTest_256.cpp  Hybrid1SortTest_32.cpp  Hybrid1SortTest_4.cpp  Hybrid1SortTest_512.cpp  Hybrid1SortTest_64.cpp  Hybrid1SortTest_8.cpp
tests/ours-h2/: CMakeLists.txt  Hybrid2SortTestTemplate.h  Hybrid2SortTest_1024.cpp  Hybrid2SortTest_128.cpp  Hybrid2SortTest_16.cpp  Hybrid2SortTest_256.cpp  Hybrid2SortTest_32.cpp  Hybrid2SortTest_4.cpp  Hybrid2SortTest_512.cpp  Hybrid2SortTest_64.cpp  Hybrid2SortTest_8.cpp
utils/: CMakeLists.txt
